--- a/Healthtechbd/AddTest.xaml
+++ b/Healthtechbd/AddTest.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Healthtechbd"
        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="800"
+      d:DesignHeight="550" d:DesignWidth="800"
       Title="AddTests">
 
     <StackPanel>
@@ -14,7 +14,7 @@
         <Grid Height="60" Background="#fff" VerticalAlignment="top">
             <Border Margin="20 0 0 0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Test" MouseDown="SubmitAddTest_Click" />
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Test" MouseDown="CancelAddTest_Click" />
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Text="/" />
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Add Test"/>
                 </StackPanel>
@@ -23,7 +23,7 @@
         </Grid>
 
         <!--Page Heading Bottom-->
-        <Border Margin="20" Height="430">
+        <Border Margin="20" Height="390">
             <StackPanel>
 
                 <!--Panel Head-->
@@ -38,7 +38,7 @@
                         <Grid>
                             <StackPanel Grid.Row="4" Grid.Column="1"  Margin="5 0">
                                 <TextBlock Style="{StaticResource Level}" Text="Name"/>
-                                <TextBox x:Name="txtTestName" Style="{StaticResource InputField}" Text=""/>
+                                <TextBox x:Name="TestName" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
                         </Grid>
                     </Border>
@@ -46,13 +46,11 @@
                 </Grid>
 
             </StackPanel>
-
         </Border>
-
         <Grid Height="60" Background="#E3E7EB" >
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelAddTest" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddTest_Click"/>
+                <Button x:Name="CancelAddTest" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddTest_Click"/>
                 <Button x:Name="SubmitAddTest" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddTest_Click" />
             </StackPanel>
 
