--- a/Healthtechbd/Diagnosis.xaml
+++ b/Healthtechbd/Diagnosis.xaml
@@ -33,11 +33,11 @@
                             <ColumnDefinition Width="80"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <TextBox Style="{StaticResource SearchBox}" Grid.Column="0" Text="Type here for search..."/>
-                        <Button Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0">
+                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" Text="Type here for search..."/>
+                        <Button x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
-                        <Button Grid.Column="2" Style="{StaticResource SearchButton}">Reset</Button>
+                        <Button x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
                     </Grid>
                 </Grid>
 
@@ -45,73 +45,37 @@
                 <ScrollViewer VerticalScrollBarVisibility="Auto" Background="#FFFFFF" Height="430">
                     <Border Padding="20 0">
                         <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                                <RowDefinition Height="30"></RowDefinition>
-                            </Grid.RowDefinitions>
+                            <DataGrid AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridDiagnosis" ItemsSource="{Binding}" HorizontalAlignment="Left" Width="757" Margin="-9,0,-8,59" Background="White">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Width="*" Header="Name" Binding="{Binding name}" />
+                                    <DataGridTextColumn Width="*" Header="Created" Binding="{Binding created}" />
+                                    <!--<DataGridTextColumn Width="*" Header="Action" />-->
+                                    <DataGridTextColumn Width="*" Visibility="Hidden" Binding="{Binding id}" />
 
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*"></ColumnDefinition>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
+                                    <DataGridTemplateColumn>
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <!--<Button Padding="0 0 0 3" x:Name="btnEditTestRow" Background="#3CC2BB" Content="Edit" Click="btnEditTestRow_Click" />-->
+                                                <Button x:Name="btnEditDiagnosisRow" Background="#3CC2BB" Width="50" Padding="0" Click="btnEditDiagnosisRow_Click" >
+                                                    <materialDesign:PackIcon Kind="TableEdit"/>
+                                                </Button>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
 
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="0" Grid.Column="0" Text="NAME" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="0" Grid.Column="1" Text="CREATED" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="0" Grid.Column="2" Text="ACTION" HorizontalAlignment="Center" />
+                                    <DataGridTemplateColumn>
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <!--<Button Padding="0 0 0 3" x:Name="btnDeleteTestRow" Background="#3CC2BB" Content="Delete" Click="btnDeleteTestRow_Click" />-->
+                                                <Button x:Name="btnDeleteDiagnosistRow" Background="#3CC2BB" Width="50"  Padding="0" Click="btnDeleteDiagnosistRow_Click">
+                                                    <materialDesign:PackIcon Kind="Delete"/>
+                                                </Button>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
 
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="1" Grid.Column="0" Text="Spherocytosis" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="1" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="1" Grid.Column="2" Kind="Settings"/>
-
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="3" Grid.Column="0" Text="Spie" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="2" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="2" Grid.Column="2" Kind="Settings"/>
-
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="4" Grid.Column="0" Text="Spielmeyer-Vogt disease" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="3" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="3" Grid.Column="2" Kind="Settings"/>
-
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="5" Grid.Column="0" Text="Spina-Spine" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="4" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="4" Grid.Column="2" Kind="Settings"/>
-
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="6" Grid.Column="0" Text="Spina bifida" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="5" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="5" Grid.Column="2" Kind="Settings"/>
-
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="7" Grid.Column="0" Text="Spina bifida hypospadias" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="6" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="6" Grid.Column="2" Kind="Settings"/>
-
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="8" Grid.Column="0" Text="Spinal cord neoplasm" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="7" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="7" Grid.Column="2" Kind="Settings"/>
-
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="9" Grid.Column="0" Text="Spinal muscular atrophy" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="8" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="8" Grid.Column="2" Kind="Settings"/>
-
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="2" Grid.Column="0" Text="Warfarin necrosis" />
-                            <TextBlock Style="{StaticResource TableDataRow}" Grid.Row="9" Grid.Column="1" Text="29/05/2018" />
-                            <materialDesign:PackIcon Style="{StaticResource ActionIcon}" Grid.Row="9" Grid.Column="2" Kind="Settings"/>
-
+                                </DataGrid.Columns>
+                            </DataGrid>
                         </Grid>
                     </Border>
                 </ScrollViewer>
