--- a/Healthtechbd/EditDiagnosis.xaml
+++ b/Healthtechbd/EditDiagnosis.xaml
@@ -1,28 +1,21 @@
-﻿<Page x:Class="Healthtechbd.AddMedicines"
+﻿<Page x:Class="Healthtechbd.EditDiagnosis"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Healthtechbd"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="800"
-      Title="AddMedicines">
+      Title="EditDiagnosis">
 
     <StackPanel>
         <!--Page Heading-->
         <Grid Height="60" Background="#fff" VerticalAlignment="top">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
             <Border Margin="20 0 0 0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="1" Text="Medicine" MouseDown="CancelAddMedicine_Click" />
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="2" Text="/" />
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="0" Text="Add Medicines"/>
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Diagnosis" MouseDown="CancelEditDiagnosis_Click" />
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="/" />
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Edit Diagnosis"/>
                 </StackPanel>
             </Border>
 
@@ -34,7 +27,7 @@
 
                 <!--Panel Head-->
                 <Grid Height="40" Background="#F6F8F7">
-                    <TextBlock Text="Add Medicinies" Margin="15 0 0 0" FontSize="14" VerticalAlignment="Center" Foreground="#333" />
+                    <TextBlock Text="Edit Diagnosis" Margin="15 0 0 0" FontSize="14" VerticalAlignment="Center" Foreground="#333" />
                 </Grid>
 
                 <!--Info Area-->
@@ -44,9 +37,9 @@
                         <Grid>
                             <StackPanel Grid.Row="4" Grid.Column="1"  Margin="5 0">
                                 <TextBlock Style="{StaticResource Level}" Text="Name"/>
-                                <TextBox x:Name="medicineName" Style="{StaticResource InputField}" Text=""/>
+                                <TextBox x:Name="DiagnosisName" Style="{StaticResource InputField}" Text=""/>
+                                <TextBox x:Name="DiagnosisId" Visibility="Hidden" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
-
                         </Grid>
                     </Border>
 
@@ -55,12 +48,11 @@
             </StackPanel>
 
         </Border>
-
         <Grid Height="60" Background="#E3E7EB" >
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelAddMedicine" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddMedicine_Click" />
-                <Button x:Name="SubmitAddMedicine" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddMedicine_Click" />
+                <Button x:Name="CancelEditDiagnosis" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelEditDiagnosis_Click" />
+                <Button x:Name="SubmitUpdateDiagnosis" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateDiagnosis_Click"  />
             </StackPanel>
 
         </Grid>
