--- a/Healthtechbd/EditMedicine.xaml
+++ b/Healthtechbd/EditMedicine.xaml
@@ -1,11 +1,10 @@
-﻿<Page x:Class="Healthtechbd.AddMedicines"
+﻿<Page x:Class="Healthtechbd.EditMedicine"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Healthtechbd"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      mc:Ignorable="d" 
+       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="800"
       Title="AddMedicines">
 
@@ -20,9 +19,9 @@
 
             <Border Margin="20 0 0 0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="1" Text="Medicine" MouseDown="CancelAddMedicine_Click" />
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="1" Text="Medicine" MouseDown="CancelEditMedicine_Click" />
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="2" Text="/" />
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="0" Text="Add Medicines"/>
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="0" Text="Edit Medicines"/>
                 </StackPanel>
             </Border>
 
@@ -34,7 +33,7 @@
 
                 <!--Panel Head-->
                 <Grid Height="40" Background="#F6F8F7">
-                    <TextBlock Text="Add Medicinies" Margin="15 0 0 0" FontSize="14" VerticalAlignment="Center" Foreground="#333" />
+                    <TextBlock Text="Edit Medicinies" Margin="15 0 0 0" FontSize="14" VerticalAlignment="Center" Foreground="#333" />
                 </Grid>
 
                 <!--Info Area-->
@@ -44,7 +43,8 @@
                         <Grid>
                             <StackPanel Grid.Row="4" Grid.Column="1"  Margin="5 0">
                                 <TextBlock Style="{StaticResource Level}" Text="Name"/>
-                                <TextBox x:Name="medicineName" Style="{StaticResource InputField}" Text=""/>
+                                <TextBox x:Name="MedicineName" Style="{StaticResource InputField}" Text=""/>
+                                <TextBox x:Name="MedicineId" Visibility="Hidden" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
 
                         </Grid>
@@ -59,8 +59,8 @@
         <Grid Height="60" Background="#E3E7EB" >
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelAddMedicine" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddMedicine_Click" />
-                <Button x:Name="SubmitAddMedicine" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddMedicine_Click" />
+                <Button x:Name="CancelEditMedicine" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelEditMedicine_Click" />
+                <Button x:Name="SubmitUpdateMedicine" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateMedicine_Click"/>
             </StackPanel>
 
         </Grid>
